Fix #2373: Fix css of feedback popup (bottom on mobile and top left on tablet)

--- a/src/components/tooltip/style/tooltip.less
+++ b/src/components/tooltip/style/tooltip.less
@@ -19,15 +19,13 @@
     margin-top: 4px;
     border-bottom-color: #c7c7c7;
   }
-  
+
+  @media (max-width: @screen-tablet) {
+    max-height: 300px;
+  }
 
   /* !important is used to override (and so deactivate) draggable styles
   applied */
-  @media (max-width: @screen-tablet) {
-    top: @small-header-height !important;
-    max-height: 300px;
-  }
-  
   @media (max-width: @screen-phone) {
     top: 50% !important;
     left: 2% !important;
